# algorithm-collection

./: CMakeLists.txt
include/: sudoku_solver.h  utilities.h
src/: main.c  soduko_solver.c  sudoku_solver.c  utilities.c
